; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_compatible_oper.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_compatible_oper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_FUNCTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"operator requires run-time type coercion: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @compatible_oper(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %13, align 4
  %22 = call i64 @oper(i32* %16, i32* %17, i32 %18, i32 %19, i32 %20, i32 %21)
  store i64 %22, i64* %14, align 8
  %23 = load i64, i64* %14, align 8
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %6
  store i64 0, i64* %7, align 8
  br label %64

26:                                               ; preds = %6
  %27 = load i64, i64* %14, align 8
  %28 = call i64 @GETSTRUCT(i64 %27)
  %29 = inttoptr i64 %28 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %29, %struct.TYPE_2__** %15, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @IsBinaryCoercible(i32 %30, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %45

36:                                               ; preds = %26
  %37 = load i32, i32* %11, align 4
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i64 @IsBinaryCoercible(i32 %37, i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %36
  %44 = load i64, i64* %14, align 8
  store i64 %44, i64* %7, align 8
  br label %64

45:                                               ; preds = %36, %26
  %46 = load i64, i64* %14, align 8
  %47 = call i32 @ReleaseSysCache(i64 %46)
  %48 = load i32, i32* %12, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %63, label %50

50:                                               ; preds = %45
  %51 = load i32, i32* @ERROR, align 4
  %52 = load i32, i32* @ERRCODE_UNDEFINED_FUNCTION, align 4
  %53 = call i32 @errcode(i32 %52)
  %54 = load i32*, i32** %9, align 8
  %55 = load i32, i32* %10, align 4
  %56 = load i32, i32* %11, align 4
  %57 = call i32 @op_signature_string(i32* %54, i8 signext 98, i32 %55, i32 %56)
  %58 = call i32 @errmsg(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %57)
  %59 = load i32*, i32** %8, align 8
  %60 = load i32, i32* %13, align 4
  %61 = call i32 @parser_errposition(i32* %59, i32 %60)
  %62 = call i32 @ereport(i32 %51, i32 %61)
  br label %63

63:                                               ; preds = %50, %45
  store i64 0, i64* %7, align 8
  br label %64

64:                                               ; preds = %63, %43, %25
  %65 = load i64, i64* %7, align 8
  ret i64 %65
}

declare dso_local i64 @oper(i32*, i32*, i32, i32, i32, i32) #1

declare dso_local i64 @GETSTRUCT(i64) #1

declare dso_local i64 @IsBinaryCoercible(i32, i32) #1

declare dso_local i32 @ReleaseSysCache(i64) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @op_signature_string(i32*, i8 signext, i32, i32) #1

declare dso_local i32 @parser_errposition(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
